--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 # database init, supports mysql too
-database=h2
-spring.datasource.schema=classpath*:db/${database}/schema.sql
-spring.datasource.data=classpath*:db/${database}/data.sql
+#database=h2
+#spring.datasource.schema=classpath*:db/${database}/schema.sql
+#spring.datasource.data=classpath*:db/${database}/data.sql
+
+spring.datasource.url=jdbc:mysql://localhost:3306/petclinic?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=admin123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Web
 spring.thymeleaf.mode=HTML
+
+logging.level.org.thymeleaf=DEBUG
+logging.level.org.thymeleaf.spring5=DEBUG
+
 
 # JPA
 spring.jpa.hibernate.ddl-auto=none
